--- a/app/src/main/res/layout/fragment_links.xml
+++ b/app/src/main/res/layout/fragment_links.xml
@@ -8,38 +8,34 @@
 
     <ImageView
         android:id="@+id/ivPaylocity"
+        android:src="@drawable/paylocity_button_unselected"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/paylocity_button_unselected"
         android:layout_gravity="center"
-        android:layout_margin="20dp"
-        android:layout_marginBottom="40dp" />
+        android:layout_margin="20dp" />
 
     <ImageView
         android:id="@+id/ivSLSCWebsite"
-        android:layout_width="290dp"
-        android:layout_height="70dp"
         android:src="@drawable/slscwebsite_btn_unselected"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="20dp"
-        android:layout_marginBottom="40dp" />
+        android:layout_margin="20dp" />
 
     <ImageView
         android:id="@+id/ivStudents"
-        android:layout_width="290dp"
-        android:layout_height="70dp"
         android:src="@drawable/students_btn_unselected"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="20dp"
-        android:layout_marginBottom="40dp" />
+        android:layout_margin="20dp"/>
 
     <ImageView
         android:id="@+id/ivYESWebsite"
-        android:layout_width="290dp"
-        android:layout_height="70dp"
         android:src="@drawable/yeswebsite_btn_unselected"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="20dp"
-        android:layout_marginBottom="40dp" />
+        android:layout_margin="20dp" />
 
 </LinearLayout>
