--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -7,11 +7,13 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingTop="10dp">
 
         <ImageView
             android:layout_width="75dp"
             android:layout_height="75dp"
+            android:layout_gravity="center"
             android:id="@+id/icon"
             android:src="@android:drawable/btn_star_big_on" />
 
@@ -27,10 +29,11 @@
 
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Large Text"
+            android:textStyle="bold"
             android:id="@+id/title"
             android:maxLines="1"
             android:ellipsize="end"/>
@@ -45,7 +48,7 @@
             android:ellipsize="end"/>
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="5dp">
@@ -54,7 +57,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Small Text"
+                android:text="@string/start"
                 android:id="@+id/start"
                 android:paddingEnd="10dp"
                 android:maxLines="1"
@@ -64,7 +67,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Small Text"
+                android:text="@string/end"
                 android:id="@+id/end"
                 android:maxLines="1"
                 android:ellipsize="end"/>
