--- a/app/src/main/res/layout/content_contact_detail.xml
+++ b/app/src/main/res/layout/content_contact_detail.xml
@@ -19,26 +19,26 @@
 
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true">
+            android:paddingBottom="20dp">
 
             <ImageView
-                android:layout_width="150dp"
+                android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:id="@+id/ivDetailIcon"
                 android:src="@drawable/head"
-                android:padding="5dp"/>
+                android:padding="5dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="FirstName LastName"
-                android:gravity="center"
-                android:layout_gravity="center_vertical"
-                android:id="@+id/tvDetailName" />
+                android:gravity="center|end"
+                android:layout_gravity="center|end"
+                android:id="@+id/tvDetailName"
+                android:text="@string/app_name"
+                android:visibility="gone"/>
 
         </LinearLayout>
 
