--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -9,12 +9,29 @@
         android:layout_height="match_parent"
         android:id="@+id/swipe">
 
-        <ListView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/lvEvents">
+            android:layout_height="match_parent">
 
-        </ListView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvNoEvents"
+                android:layout_centerHorizontal="true"
+                android:paddingTop="220dp"
+                android:text="@string/empty_events_list"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:visibility="invisible"/>
+
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/lvEvents"
+                android:paddingBottom="65dp"/>
+
+
+        </RelativeLayout>
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
