--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -15,7 +15,8 @@
             android:layout_height="75dp"
             android:layout_gravity="center"
             android:id="@+id/icon"
-            android:src="@android:drawable/btn_star_big_on" />
+            android:src="@drawable/science_center"
+            android:visibility="gone"/>
 
     </LinearLayout>
 
@@ -53,24 +54,56 @@
             android:layout_height="wrap_content"
             android:paddingTop="5dp">
 
-            <TextView
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="@string/start"
-                android:id="@+id/start"
-                android:paddingEnd="10dp"
-                android:maxLines="1"
-                android:ellipsize="end"/>
+                android:layout_height="match_parent">
 
-            <TextView
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/start"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textStyle="bold"
+                    android:layout_alignParentStart="true"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:id="@+id/start"
+                    android:paddingEnd="10dp"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:layout_alignParentEnd="true"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="@string/end"
-                android:id="@+id/end"
-                android:maxLines="1"
-                android:ellipsize="end"/>
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/end"
+                    android:textStyle="bold"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:layout_alignParentStart="true"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:id="@+id/end"
+                    android:maxLines="1"
+                    android:paddingEnd="10dp"
+                    android:ellipsize="end"
+                    android:layout_alignParentEnd="true"/>
+
+            </RelativeLayout>
+
         </LinearLayout>
     </LinearLayout>
 
